# trusthandoff

./: LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  publish.yml  scorecard.yml  tests.yml
adapters/: adapter_autogen.py  adapter_crewai.py  adapter_langgraph.py  test_adapter_autogen.py  test_adapter_crewai.py  test_adapter_langgraph.py
examples/: example_agents.py  example_envelope_flow.py
specs/: adapters.md  authority-model.md  protocol_v0.md  trusthandoff-spec-v0.1.md  trusthandoff-spec-v0.2.md
src/trusthandoff/: __init__.py  api.py  attestation.py  capability_chain_validation.py  capability_envelope.py  capability_extraction.py  capability_signing.py  capability_token.py  chain_validation.py  decision.py  delegation_scope.py  envelope_security.py  execution_control.py  handoff.py  hop.py  loop.py  middleware.py  packet.py  policy.py  revocation.py  revocation_validation.py  validation.py  wire.py
tests/: _old_test_adapter_langgraph_packet_capability.py  test_attestation.py  test_capability_api.py  test_capability_chain_validation.py  test_capability_envelope.py  test_capability_extraction.py  test_capability_signing.py  test_capability_token.py  test_chain_validation.py  test_clock_skew_tolerance.py  test_decision.py  test_delegation_scope.py  test_handoff.py  test_hop.py  test_loop.py  test_middleware_depth.py  test_packet_capability_token.py  test_revocation.py  test_revocation_integration.py  test_revocation_validation.py  test_runtime_policy.py  test_validation.py  test_wire.py
