[project]
name = "trusthandoff"
version = "0.2.2"
description = "Verifiable task delegation between AI agents"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  {name = "Shay Mizuno"}
]

license = {text = "MIT"}

dependencies = [
  "pydantic>=2.0",
  "cryptography>=42.0"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.urls]
Homepage = "https://github.com/shaymizuno/trusthandoff"
Repository = "https://github.com/shaymizuno/trusthandoff"
