[project]
name = "trusthandoff"
version = "0.3.0"
description = "Verifiable task delegation between AI agents"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    {name = "Shay Mizuno"},
    {name = "Hind Tagmouti"},
]

license = {text = "MIT"}

dependencies = [
    "pydantic>=2.7,<3",
    "cryptography>=42,<44",
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.urls]
Homepage = "https://github.com/trusthandoff/trusthandoff"
Repository = "https://github.com/trusthandoff/trusthandoff"
